# Moving-Stopped-Persons-Real-Time-Detection-using-YOLOv8-or-YOLOv10-Roboflow_Supervision

./: .gitignore  Moving_Stopped_Persons_detection.ipynb  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Notebooks/: Airport's_Object_Detection.ipynb  Images_Downloade_using_Fiftyone.ipynb  Mouvement_Detection_and_Speed_Calculation.ipynb  OussemaModelTraining.ipynb  Persons_Counting_Entrance_Exiting.ipynb
configs/: default.yaml
notebooks/: Moving_Stopped_Persons_detection.ipynb
scripts/: run_demo.sh
src/movement_detection/: __init__.py  __main__.py  cli.py  config.py  io.py  model.py  motion.py  pipeline.py  types.py  utils.py
tests/: test_motion.py
